prevent jumpy image loading

--- a/app/styles/root.css
+++ b/app/styles/root.css
@@ -83,10 +83,18 @@ pre {
   border-radius: 5px;
 }
 
-img {
+.flow-diagram-wrapper {
   width: 100%;
-  height: auto;
+  aspect-ratio: 300/169;
   border: 1px solid var(--onBackground);
   border-radius: 5px;
   overflow: hidden;
+}
+
+.flow-diagram {
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
 }
